--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <form>
             <input type="text" placeholder="Nome" required />
             <input type="email" placeholder="E-mail" required />
+            <label for="email">E-mail:</label>
+<input type="email" placeholder="E-mail" id="email" required />
             <input type="password" placeholder="Senha" required />
             <button type="submit">Enviar</button>
         </form>
